# keyforge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
app/: CMakeLists.txt  Info.plist.in
app/assets/: keyforge.icns
app/src/: app.cpp  app.hpp  main.cpp  theme.cpp  theme.hpp  ui_state.hpp
app/src/panels/: actions.cpp  detail.cpp  entry_list.cpp  palette.cpp  sidebar.cpp
core/: CMakeLists.txt
core/include/vaultcore/: audit.hpp  commands.hpp  crypto.hpp  generator.hpp  paths.hpp  porting.hpp  qr.hpp  result.hpp  storage.hpp  totp.hpp  util.hpp  vault.hpp
core/src/: audit.cpp  commands.cpp  crypto.cpp  generator.cpp  paths.cpp  porting.cpp  qr.cpp  storage.cpp  totp.cpp  vault.cpp
docs/superpowers/plans/: 2026-07-14-keyforge-password-manager.md  2026-07-16-keyforge-v2-browser-ui.md
docs/superpowers/specs/: 2026-07-14-keyforge-password-manager-design.md  2026-07-16-keyforge-v2-browser-ui-design.md
tests/: CMakeLists.txt  test_audit.cpp  test_commands.cpp  test_crypto.cpp  test_generator.cpp  test_otpauth.cpp  test_paths.cpp  test_porting.cpp  test_qr.cpp  test_storage.cpp  test_totp.cpp  test_vault.cpp
